// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for ExtoleDestination's trackEvent destination action: all fields 1`] = `
Object {
  "data": Object {
    "email": "pehgoruwu@lahgane.gp",
    "event_time": "2021-02-01T00:00:00.000Z",
    "extole_app": "Segment Destination App",
    "extole_consumer_ip": "]FjD&n",
    "partner_anonymous_id": "]FjD&n",
    "partner_user_id": "]FjD&n",
    "testType": "]FjD&n",
  },
  "event_name": "]FjD&n",
}
`;

exports[`Testing snapshot for ExtoleDestination's trackEvent destination action: required fields 1`] = `
Object {
  "data": Object {
    "event_time": "2021-02-01T00:00:00.000Z",
    "extole_app": "Segment Destination App",
    "partner_anonymous_id": "]FjD&n",
    "partner_user_id": "]FjD&n",
  },
  "event_name": "]FjD&n",
}
`;
